# 2026_1-cafe_order_kiosk

./: .gitignore  README.md  pyproject.toml
cafe_order_kiosk/: __init__.py  cli.py  kiosk_store.py  main.py  models.py  utils.py
tests/unit/: test_storage.py
